# PRsum

./: README.md
backend/: config.py  main.py  pyproject.toml  schemas.py
backend/db/: mongo.py
backend/router/: routes.py
backend/services/: auth.py  fetch_pr.py  save_pr.py  sse.py  summarize_pr.py
frontend/: index.html  tailwind.config.ts  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChangeTypeBadge.tsx  ChecklistItem.tsx  CopyButton.tsx  DiffViewer.tsx  FileDropZone.tsx  FileNoteOverlay.tsx  FileSummaryCard.tsx  GoogleSignInButton.tsx  InlineDiffComment.tsx  InsightItem.tsx  KeyboardShortcuts.tsx  LoadingState.tsx  Navbar.tsx  OutputSkeleton.tsx  PRAtAGlance.tsx  PRHealthScore.tsx  QuickNav.tsx  ReliabilityBar.tsx  SimilarPRs.tsx  StructuredSummary.tsx  SummaryOutput.tsx
frontend/src/components/ui/: card.tsx
frontend/src/hooks/: use-store.ts
frontend/src/lib/: api.ts  mock-data.ts  summary-utils.ts
frontend/src/pages/: History.tsx  Landing.tsx  Settings.tsx  Summarize.tsx
frontend/src/store/: app-store.ts
frontend/src/types/: index.ts
