[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "gitpython>=3.1.46",
    "langchain>=1.2.15",
    "langchain-openai>=0.3.35",
    "langgraph>=1.1.5",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.42.0",
]
